--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,12 @@
-$paddingLeft: 65px;
+// Font Colors
+
+$f-p: #e7473c;
+$f-s: #f0f0f0;
+$f-t1: #747474;
+$f-t2: #818181;
+
+// Background Colors
+
+$bg-p: #e7473c;
+$bg-s: #f0f0f0;
+
