--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,7 @@
 @import "_variables";
 @import "reset";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Sofia+Sans+Condensed:wght@700&display=swap');
 
 * {
   padding: 0;
@@ -75,7 +75,6 @@ hgroup {
   a {
     color: $f-t1;
     box-shadow: 0 1px 0 rgba(0,0,0,.6);
-    display: inline-block;
     margin: 0 1em .25em 0;
     text-decoration: none;
 
@@ -96,9 +95,69 @@ hgroup {
 }
 
 main {
-  height: 1000vh;
-  margin-left: 600px;
-  background-color: $bg-p;
+  height: 100vh;
+  padding-left: 600px;
+  color: $f-s;
 }
+
+article {
+  padding: 72px;
+  height: 100vh;
+  font-size: 1.6rem;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  font-family: sans-serif;
+  background-color: $bg-p;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0,0,0,.2) 3%,
+      transparent,
+      transparent,
+      transparent,
+      transparent
+    );
+
+  .main-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+
+  h2 {
+    font-size: 2em;
+    font-family: 'Sofia Sans Condensed', sans-serif;
+  }
+
+  .main-director {
+    text-align: right;
+    font-size: .6em;
+    line-height: 1.2;
+    font-weight: 600;
+  }
+  }
+
+ img{
+    box-shadow: 0 80px 80px -80px #2d0806;
+    width: 100%;
+    padding-top: 1.6em;
+    cursor: pointer;
+}
+
+  .rating p{
+    padding-top: 2em;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: .8em;
+    text-align: right;
+    color: #000;
+
+}
+
+
+}
+
+
+
 
 
